# hhead

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Readme.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/display/: hex.rs  metadata.rs  minimap.rs  mod.rs
src/formats/: detection.rs  metadata.rs  mod.rs
src/io/: file.rs  mod.rs
src/utils/: color.rs  mod.rs  parsing.rs
tests/: integration_tests.rs
wiki/: FAQ.md  Format-Internals.md  Home.md  README.md  Recipes.md  publish.sh
