[package]
name = "hhead"
version = "0.1.0"
edition = "2024"
description = "Hex dump utility with color and UTF-8 support"
authors = ["Martingalefan"]

[lib]
name = "hhead"
path = "src/lib.rs"

[[bin]]
name = "hhead"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
image = "0.25"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"
